--- a/coronavirus-tracker/src/main/resources/templates/recovered.html
+++ b/coronavirus-tracker/src/main/resources/templates/recovered.html
@@ -22,7 +22,7 @@
     <!-- Sidebar -->
     <nav id="sidebar">
         <div class="sidebar-header">
-            <h3>Spring Boot + React</h3>
+            <h3>Spring Boot + Bootstrap</h3>
         </div>
 
         <ul class="list-unstyled components">
@@ -71,11 +71,11 @@
             <div class="jumbotron">
                 <br>
                 <h1>&ensp;Coronavirus Statistic</h1>
-                <p>&ensp;&ensp;Current number of cases reported across the globe</p>
+                <p>&ensp;&ensp;Current number of recovered cases reported across the globe</p>
                 <hr class="my-4">
 
                 <h1 class="display-4" style="text-align:center" th:text="${totalReportedCases}"></h1>
-                <p class="lead" style="text-align:center">Total cases reported as of today</p>
+                <p class="lead" style="text-align:center">Total recovered cases reported as of today</p>
                 <p>
                 <p style="text-align:center">
                     New cases reported since previous day:
