--- a/coronavirus-tracker/src/main/resources/templates/deaths.html
+++ b/coronavirus-tracker/src/main/resources/templates/deaths.html
@@ -22,7 +22,7 @@
     <!-- Sidebar -->
     <nav id="sidebar">
         <div class="sidebar-header">
-            <h3>Spring Boot + React</h3>
+            <h3>Spring Boot + Bootstrap</h3>
         </div>
 
         <ul class="list-unstyled components">
