--- a/coronavirus-tracker/src/main/resources/templates/confirmed.html
+++ b/coronavirus-tracker/src/main/resources/templates/confirmed.html
@@ -42,16 +42,16 @@
                 </ul>
             </li>
             <li>
-                <a href="#">SOURCES</a>
+                <a href="https://github.com/CSSEGISandData">SOURCE</a>
             </li>
         </ul>
 
         <ul class="list-unstyled components">
             <li>
-            <a href="#">LinkedIn</a>
-        </li>
-        <li>
-            <a href="#">GitHub</a>
+                <a href="https://www.linkedin.com/in/terylla/">LinkedIn</a>
+            </li>
+            <li>
+                <a href="https://github.com/terylla">GitHub</a>
         </li>
         </ul>
 
@@ -70,7 +70,7 @@
 
             <div class="jumbotron">
                  <br>
-                <h1>&ensp;Coronavirus Statistic</h1>
+                <h1>&ensp;Coronavirus Statistic - Confirmed Cases</h1>
                 <p>&ensp;&ensp;Current number of cases reported across the globe</p>
                         <hr class="my-4">
 
